@@ -609,6 +609,8 @@ Assume the filesystem is going to be mounted read-only, and return
 in response to any attempt to write.
 This flag also changes the default mode of the backed file from 0600 to 0400
 and disables the MD5 checksum cache.
+.It Fl \-rss
+When writing blocks, specify Reduced Redundancy Storage.
 .It Fl \-size=SIZE
 Specify the size (in bytes) of the backed file to be exported by the filesystem.
 The size may have an optional suffix 'K' for kilobytes, 'M' for megabytes, 'G' for gigabytes, 'T' for terabytes, 'E' for exabytes, 'Z' for zettabytes, or 'Y' for yottabytes.
